--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -15,6 +15,9 @@ jobs:
 
       - name: Setup Java JDK
         uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '17'
+          distributions: 'adopt'
 
       - name: Build with Gradle
         run: ./gradlew build
