--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v4.2.1
         with:
           java-version: '17'
-          distributions: 'adopt'
+          distribution: 'adopt'
 
       - name: Build with Gradle
         run: ./gradlew build
