--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
+      - name: Run unit tests
+        run: ./gradlew test
+
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.3
         with:
